--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
