--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.5",
+    "express": "^4.18.2",
     "firebase": "^10.0.0",
     "protobufjs": "^7.2.5",
     "react": "^18.2.0",
