--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start-server":"node server/index.js"
-    },
+    "start-server": "node server/index.js"
+  },
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.11.1",
@@ -18,6 +18,8 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.5",
     "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.0.0",
     "multer": "^1.4.5-lts.1",
