--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
+    "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0"
